// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$append on a non array item should do nothing and be stripped 1`] = `
"{
	\\"1a\\": {
		\\"1aa\\": 1
	},
	\\"2b\\": {}
}"
`;

exports[`when merging two arrays and a source item has $append and an other item also has $append it should append them in the order they are defined 1`] = `
"{
	\\"a\\": [
		{
			\\"aa\\": \\"string\\"
		},
		{
			\\"bb\\": \\"append 1\\"
		},
		{
			\\"cc\\": \\"append 2\\"
		}
	]
}"
`;

exports[`when merging two arrays and a source item has $append it should append the source array item to the target array 1`] = `
"{
	\\"a\\": [
		{
			\\"aa\\": \\"string\\"
		},
		{
			\\"bb\\": \\"append\\"
		}
	]
}"
`;

exports[`when merging two arrays and a source item has $append it should process the $append.value property before appending it to the target array 1`] = `
"{
	\\"a\\": [
		{
			\\"aa\\": \\"string\\"
		},
		{
			\\"bb\\": \\"append\\"
		}
	]
}"
`;
